# peakipy

./: .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  peakipy.config  pyproject.toml  requirements.txt  setup.py  shell.nix
.github/workflows/: ci.yml
ccpn_macros/: selected_to_peakipy.py
css/: custom.css  termynal.css
docs/: examples.md  index.html  index.md  instructions.md  lineshapes.md  quickstart.md
docs/source/: conf.py  index.md
docs/source/usage/: code.rst  examples.md  examples.rst  installation.md  installation.rst  instructions.md  instructions.rst  lineshapes.md  lineshapes.rst  quickstart.md  quickstart.rst
docs/static/equations/: G.tex  L.tex  pv.tex
examples/: config.yml  index.html  test_ccpn.py  test_ccpn.pyo  test_deconv_ccpn.py
images/equations/: G.tex  G_lw.tex  L.tex  pv.tex
instructions/: index.html
lineshapes/: index.html
peak_deconvolution/: core.py  pseudo_voigt_2d.py
peakipy/: __main__.py  constants.py  core.py  fitting.py  io.py  lineshapes.py  plotting.py  utils.py
peakipy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
peakipy/cli/: check.py  check_panel.py  edit.py  edit_panel.py  fit.py  main.py  peakipy.py  read.py  spec.py  test.py
peakipy/cli/edit_fits_app/: main.py  theme.yaml
peakipy/commandline/: check.py  check_fits.py  edit.py  fit.py  fit_peaks.py  peakipy.py  read.py  read_peaklist.py  spec.py
peakipy/commandline/edit_fits_app/: main.py
pip-wheel-metadata/peakipy-0.1.1.dist-info/: METADATA  WHEEL  entry_points.txt
quickstart/: index.html
scripts/: __main__.py  check_fits  check_fits.py  edit_fits  edit_fits.py  edit_fits_script  edit_fits_script.py  fit_peaks  fit_peaks.py  fit_peaks_mp.py  fit_pipe_peaks.py  peakipy  plot_all.py  read_peaklist  read_peaklist.py  run_check_fits.py  spec  spec.py
search/: search_index.json
static/equations/: G_lw.tex  pv_lw.tex  pv_xy.tex  sigma_g.tex
test/: fits.csv  peakipy.config  peaks.csv  test.csv  test_cli.py  test_commandline.py  test_core.py  test_data.py  test_edit.py  test_fit.py  test_fitting.py  test_io.py  test_lineshapes.py  test_main.py  test_pipe.ft2  test_pipe.tab  test_plotting.py  test_simulation.py  test_utils.py
test/test_ddx4/: autoFit.com  axt.tab  cluster.csv  edited_peaks.csv  fits.csv  fits_mp.csv  log.txt  nlin.tab  peakipy.config  peaks.a2  peaks.csv  peaks_new.csv  pk.tcl  plot.py  run.xsh  show_clusters.yml  vclist  ~fits.csv  ~log.txt  ~peaks.csv  ~tmp.csv  ~tmp_out.csv
test/test_ddx4/tmp/: peaks_0.csv  peaks_0_fit.csv  peaks_1.csv  peaks_1_fit.csv  peaks_2.csv  peaks_2_fit.csv  peaks_3.csv  peaks_3_fit.csv  tmp.csv  tmp_out.csv
test/test_protein_L/: Makefile  _fits.csv  _test.csv  _test_edited.csv  autoFit.com  axt.tab  ccpnTable.csv  ccpnTable.tsv  compare.py  correlation.html  dif.ft2  edited_peaks.csv  fits.csv  fits.py  fits_G.csv  fits_L.csv  fits_PV.csv  fits_V.csv  fits_a2.csv  fits_a3.csv  fits_pipe.csv  fits_sparky.csv  fits_v.csv  log.txt  nlin.csv  nlin.tab  params.fuda  peakipy.config  peaks.a2  peaks.csv  peaks.fuda  peaks.sparky  plot_all.py  run.xsh  run_autofit.sh  show_clusters.yml  sim.ft2  test.csv  test.tab.old  test1.ucsf  (+13 more)
test/test_protein_L/tmp/: peaks_0.csv  peaks_0_fit.csv  peaks_0_log.txt  peaks_1.csv  peaks_10.csv  peaks_10_fit.csv  peaks_11.csv  peaks_11_fit.csv  peaks_1_fit.csv  peaks_1_log.txt  peaks_2.csv  peaks_2_fit.csv  peaks_2_log.txt  peaks_3.csv  peaks_3_fit.csv  peaks_3_log.txt  peaks_4.csv  peaks_4_fit.csv  peaks_5.csv  peaks_5_fit.csv  peaks_6.csv  peaks_6_fit.csv  peaks_7.csv  peaks_7_fit.csv  peaks_8.csv  peaks_8_fit.csv  peaks_9.csv  peaks_9_fit.csv  tmp.csv  tmp_out.csv
test/test_protein_L/tmp.ccpn/ccpnv3/ccp/general/DataLocation/: standard+default_user_2022-04-03-11-03-25-911_00001.xml
test/test_protein_L/tmp.ccpn/ccpnv3/ccp/nmr/Nmr/: default+default_user_2022-04-03-11-03-25-912_00001.xml
test/test_protein_L/tmp.ccpn/ccpnv3/memops/Implementation/: tmp.xml
test/test_protein_L/tmp.ccpn/logs/: log_ccpn_20220403.txt
test/test_protein_L/tmp.ccpn/state/: Current  Layout.json
test/tmp/: peaks_0.csv  peaks_0_fit.csv  peaks_1.csv  peaks_1_fit.csv  peaks_2.csv  peaks_2_fit.csv  peaks_3.csv  peaks_3_fit.csv
(+5 files in other folders)
