[tool.poetry]
name = "peakipy"
version = "1.0.0"
description = "Deconvolute overlapping NMR peaks"
authors = ["Jacob Brady <jacob.brady0449@gmail.com>"]

readme = 'README.md'
repository = "https://github.com/j-brady/peakipy"
homepage = "https://j-brady.github.io/peakipy"

classifiers = [
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.10",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: POSIX :: Linux",
        "Operating System :: Microsoft :: Windows",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        ]

license="GNU GPLv3"
[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
pandas = "^1.4.3"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
PyYAML = "^5.1"
nmrglue = "^0.9.0"
scipy = "^1.9.0"
lmfit = "^1.0.3"
scikit-image = "^0.19.3"
bokeh = "^2.4.3"
numdifftools = "^0.9.39"
Jinja2 = "^3.1.2"
jedi = "0.15.2"
typer = "^0.6.1"
statsmodels = "^0.13.2"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
mkdocs-material = "^8.5.7"

[tool.poetry.scripts]
peakipy = 'peakipy.cli.main:app'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
