[tool.poetry]
name = "peakipy"
version = "1.1.3"
description = "Deconvolute overlapping NMR peaks"
authors = ["Jacob Brady <jacob.brady0449@gmail.com>"]

readme = 'README.md'
repository = "https://github.com/j-brady/peakipy"
homepage = "https://j-brady.github.io/peakipy"

classifiers = [
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.10",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: POSIX :: Linux",
        "Operating System :: Microsoft :: Windows",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        ]

license="GNU GPLv3"
[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.0"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
PyYAML = "^6.0.1"
nmrglue = "^0.9"
scipy = "^1.11.2"
lmfit = "^1.2.2"
scikit-image = "^0.21.0"
bokeh = "^3.2.2"
numdifftools = "^0.9.39"
Jinja2 = "^3.1.2"
jedi = "^0.19.0"
typer = "^0.9.0"
statsmodels = "^0.13.2"
rich = "^12.5.1"
tqdm = "^4.65.0"

[tool.poetry.scripts]
peakipy = 'peakipy.cli.main:app'

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.2"
mkdocs-material = "^8.5.7"
ipython = "^8.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
